Implement user authentication with login and registration features, enhance security configuration, and update UI for better navigation